--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">Topic</a></li>
+          <li class="nav__item"><a href="#services" class="nav__link">About</a></li>
           <li class="nav__item"><a href="#new" class="nav__link">new</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
 
