topicコンテンツを追加しました。

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<div class="nav__menu" id="nav-menu">
 				<ul class="nav__list">
 					<li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-					<li class="nav__item"><a href="#about" class="nav__link">Topic</a></li>
-					<li class="nav__item"><a href="#services" class="nav__link">About</a></li>
+					<li class="nav__item"><a href="#topic" class="nav__link">Topic</a></li>
+					<li class="nav__item"><a href="#about" class="nav__link">About</a></li>
 					<li class="nav__item"><a href="#new" class="nav__link">new</a></li>
 					<li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
 
@@ -53,19 +53,19 @@
 
 		<!----------------------- swiper -------------------------->
 		<!-- Swiper -->
-		<aside class="asidecontent">
+		<aside class="asidecontent" id="home">
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
-					<div class="swiper-slide"><img src="img/about.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-01.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-02.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-03.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-04.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-05.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-06.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-07.jpg" alt=""></div>
+					<div class="swiper-slide"><img src="img/home-08.jpg" alt=""></div>
+					
+					
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
@@ -76,17 +76,47 @@
 		</aside>
 		<!---------------------x swiper x------------------------->
 
+		<!---------------------- Topic ------------------------>
+
+		<section class="topic section bd-container" id="topic">
+			<div class="topic__container bd-grid">
+
+				<div class="topic__contenc">
+					<a href="#"><img src="img/topic-01.jpg" alt="" class="topic__img"></a>
+					<p class="topic__ditail">Adidas Originals A-ZX コレクションモデル</p>
+				</div>
+
+				<div class="topic__contenc">
+					<a href="#"><img src="img/topic-02.png" alt="" class="topic__img"></a>
+					<p class="topic__ditail">SACAI(サカイ) × Nike(ナイキ）歴代コラボレーションモデル</p>
+				</div>
+
+				<div class="topic__contenc">
+					<a href="#"><img src="img/topic-03.jpg" alt="" class="topic__img"></a>
+					<p class="topic__ditail">atomos(アトモス) × Asics(アシックス)歴代コラボレーションモデル</p>
+				</div>
+
+				<div class="topic__contenc">
+					<a href="#"><img src="img/topic-04.jpg" alt="" class="topic__img"></a>
+					<p class="topic__ditail">MEDCOM TOY(メディコム・トイ) × Nike(ナイキ)歴代コラボレーションモデル</p>
+				</div>
+
+			</div>
+		</section>
+
+
+		<!---------------------x Topic x------------------------>
+
 		<!----------------------- About --------------------------->
 		<section class="about section bd-container" id="about">
 			<div class="about__container bd-grid">
 				<div class="about__data">
 					<span class="section-subtitle about__initial">About us</span>
-					<h2 class="section-title about__initial">紹介<br>スニーカーサイト</h2>
-					<p class="about__description">We.</p>
+					<h2 class="section-title about__initial">最新のスニーカーをはじめ、海外で噂やリークされている未発売モデル、海外限定、レアものなどを中心に情報を配信中</h2>
 					<a href="#" class="button">Explore history</a>
 				</div>
 
-				<img src="img/home.png" alt="" class="about__img">
+				<img src="img/about.png" alt="" class="about__img">
 			</div>
 		</section>
 
@@ -98,6 +128,7 @@
 			<h2 class="section-title">New of the week</h2>
 
 			<div class="new__container bd-grid">
+
 				<div class="new__content">
 					<img src="img/sneaker-01.jpg" alt="" class="new__img">
 					<h3 class="new__name">Nike</h3>
