--- a/index.html
+++ b/index.html
@@ -163,6 +163,40 @@
 
 		<!---------------------x Menu x---------------------------->
 
+		<!--------------------- news ---------------------------->
+		<section class="contact section bd-container" id="contact">
+			<span class="section-subtitle">News</span>
+			<h2 class="section-title">Information</h2>
+			<ul class="bd-grid news-content">
+				<li id="post-1" class="news">
+					<a href="#">
+						<img src="https://placehold.jp/100x100.png" alt="">
+					</a>
+					<div class="news-content">
+						<p class="bold">お知らせ</p>
+						<p>2020年12月3日</p>
+						<p class="bold">スニーカーの販売サイトを開始しました！</p>
+						<p>スニーカーの販売サイトを開設しま....</p>
+						<a href="">続きを読む</a>
+					</div>
+				</li>
+				<li id="post-1" class="news">
+					<a href="#">
+						<img src="https://placehold.jp/100x100.png" alt="">
+					</a>
+					<div class="news-content">
+						<p class="bold">お知らせ</p>
+						<p>2020年12月3日</p>
+						<p class="bold">スニーカーの販売サイトを開始しました！</p>
+						<p>スニーカーの販売サイトを開設しま....</p>
+						<a href="">続きを読む</a>
+					</div>
+				</li>
+			</ul>
+		</section>
+
+		<!--------------------x news x--------------------------->
+
 		<!---------------------- Contact us --------------------->
 
 		<section class="contact section bd-container" id="contact">
