news　の配置編集

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<section class="contact section bd-container" id="contact">
 			<span class="section-subtitle">News</span>
 			<h2 class="section-title">Information</h2>
-			<ul class="bd-grid news-content">
+			<ul class="bd-grid news-contents">
 				<li id="post-1" class="news">
 					<a href="#">
 						<img src="https://placehold.jp/100x100.png" alt="">
