shop の固定ページ作成とindex.htmlの修正

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 				<ul class="nav__list">
 					<li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
 					<li class="nav__item"><a href="#topic" class="nav__link">Topic</a></li>
-					<li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+					<li class="nav__item"><a href="aboutus.html" class="nav__link">About</a></li>
 					<li class="nav__item"><a href="#new" class="nav__link">new</a></li>
+					<li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li>
 					<li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
 
 				</ul>
@@ -64,8 +65,8 @@
 					<div class="swiper-slide"><img src="img/home-06.jpg" alt=""></div>
 					<div class="swiper-slide"><img src="img/home-07.jpg" alt=""></div>
 					<div class="swiper-slide"><img src="img/home-08.jpg" alt=""></div>
-					
-					
+
+
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
@@ -129,6 +130,7 @@
 
 				<div class="new__content">
 					<img src="img/sneaker-01.jpg" alt="" class="new__img">
+					<span class="new__pop">New</span>
 					<h3 class="new__name">Nike</h3>
 					<span class="new__detail">DC8380-500</span>
 					<span class="mnew__preci">未定</span>
@@ -137,6 +139,7 @@
 
 				<div class="new__content">
 					<img src="img/sneaker-02.jpg" alt="" class="new__img">
+					<span class="new__pop">New</span>
 					<h3 class="new__name">Adidas</h3>
 					<span class="new__detail">CP9652</span>
 					<span class="new__preci">¥30,800</span>
@@ -145,6 +148,7 @@
 
 				<div class="new__content">
 					<img src="img/sneaker-03.jpg" alt="" class="new__img">
+					<span class="new__pop">New</span>
 					<h3 class="new__name">New Balance</h3>
 					<span class="new__detail">M992GG</span>
 					<span class="new__preci">¥31,900</span>
@@ -153,6 +157,7 @@
 
 				<div class="new__content">
 					<img src="img/sneaker-04.jpg" alt="" class="new__img">
+					<span class="new__pop">New</span>
 					<h3 class="new__name">Nike</h3>
 					<span class="new__detail">DD3223-100</span>
 					<span class="new__preci">¥24,200</span>
