--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
 					<li class="nav__item"><a href="#topic" class="nav__link">Topic</a></li>
 					<li class="nav__item"><a href="aboutus.html" class="nav__link">About</a></li>
-					<li class="nav__item"><a href="#new" class="nav__link">new</a></li>
+					<li class="nav__item"><a href="#new" class="nav__link">New</a></li>
 					<li class="nav__item"><a href="shop.html" class="nav__link">Shop</a></li>
 					<li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
 
@@ -65,8 +65,6 @@
 					<div class="swiper-slide"><img src="img/home-06.jpg" alt=""></div>
 					<div class="swiper-slide"><img src="img/home-07.jpg" alt=""></div>
 					<div class="swiper-slide"><img src="img/home-08.jpg" alt=""></div>
-
-
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
@@ -81,25 +79,40 @@
 			<div class="topic__container bd-grid">
 
 				<div class="topic__contenc">
-					<a href="#"><img src="img/topic-01.jpg" alt="" class="topic__img"></a>
+					<a href="#">
+						<div class="up__img">
+							<img src="img/topic-01.jpg" alt="" class="topic__img">
+						</div>
+					</a>
 					<p class="topic__ditail">Adidas Originals A-ZX コレクションモデル</p>
 				</div>
 
 				<div class="topic__contenc">
-					<a href="#"><img src="img/topic-02.png" alt="" class="topic__img"></a>
+					<a href="#">
+						<div class="up__img">
+							<img src="img/topic-02.png" alt="" class="topic__img">
+						</div>
+					</a>
 					<p class="topic__ditail">SACAI(サカイ) × Nike(ナイキ）歴代コラボレーションモデル</p>
 				</div>
 
 				<div class="topic__contenc">
-					<a href="#"><img src="img/topic-03.jpg" alt="" class="topic__img"></a>
+					<a href="#">
+						<div class="up__img">
+							<img src="img/topic-03.jpg" alt="" class="topic__img">
+						</div>
+					</a>
 					<p class="topic__ditail">atomos(アトモス) × Asics(アシックス)歴代コラボレーションモデル</p>
 				</div>
 
 				<div class="topic__contenc">
-					<a href="#"><img src="img/topic-04.jpg" alt="" class="topic__img"></a>
-					<p class="topic__ditail">MEDCOM TOY(メディコム・トイ) × Nike(ナイキ)歴代コラボレーションモデル</p>
+						<a href="#">
+							<div class="up__img">
+								<img src="img/topic-04.jpg" alt="" class="topic__img">
+							</div>
+						</a>
+						<p class="topic__ditail">MEDCOM TOY(メディコム・トイ) × Nike(ナイキ)歴代コラボレーションモデル</p>
 				</div>
-
 			</div>
 		</section>
 
@@ -163,6 +176,26 @@
 					<span class="new__preci">¥24,200</span>
 					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
 				</div>
+
+				<div class="new__content">
+					<img src="img/sneaker-05.png" alt="" class="new__img">
+					<span class="new__pop">New</span>
+					<h3 class="new__name">Nike</h3>
+					<span class="new__detail">CJ1229-900</span>
+					<span class="new__preci">¥15,400</span>
+					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+				</div>
+
+				<div class="new__content">
+					<img src="img/sneaker-06.jpg" alt="" class="new__img">
+					<span class="new__pop">New</span>
+					<h3 class="new__name">エア
+						ジョーダン</h3>
+					<span class="new__detail">CT8019-140</span>
+					<span class="new__preci">¥22,500</span>
+					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+				</div>
+
 			</div>
 		</section>
 
