--- a/shop.html
+++ b/shop.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>aboutus</title>
+	<title>Shop</title>
 	<!------------ Box icons -------------->
 	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
@@ -13,52 +13,152 @@
 
 <body>
 	<main class="l-main">
-		<!--------------------- New ---------------------------->
-		<section class="new section bd-container" id="new">
-			<span class="section-subtitle">New</span>
-			<h2 class="section-title">New of the week</h2>
+		<section class="section featured bd-container">
+			<div class="title">
+				<h1>Nike</h1>
+			</div>
 
-			<div class="new__container bd-grid">
-
-				<div class="new__content">
-					<img src="img/sneaker-01.jpg" alt="" class="new__img">
-					<span class="new__pop">1位</span>
-					<h3 class="new__name">Nike</h3>
-					<span class="new__detail">DC8380-500</span>
-					<span class="mnew__preci">未定</span>
-					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+			<div class="product__center container">
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-01.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>NIKE W BLAZER MID '77 WHITE</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥14.300</h3>
+					</div>
 				</div>
-
-				<div class="new__content">
-					<img src="img/sneaker-02.jpg" alt="" class="new__img">
-					<span class="new__pop">New</span>
-					<h3 class="new__name">Adidas</h3>
-					<span class="new__detail">CP9652</span>
-					<span class="new__preci">¥30,800</span>
-					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-02.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>AIR MAX PLUS WOLF GREY</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥17.500</h3>
+					</div>
 				</div>
-
-				<div class="new__content">
-					<img src="img/sneaker-03.jpg" alt="" class="new__img">
-					<span class="new__pop">New</span>
-					<h3 class="new__name">New Balance</h3>
-					<span class="new__detail">M992GG</span>
-					<span class="new__preci">¥31,900</span>
-					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-03.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>AIR MAX 1 LV8 WHITE</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥16.500</h3>
+					</div>
 				</div>
-
-				<div class="new__content">
-					<img src="img/sneaker-04.jpg" alt="" class="new__img">
-					<span class="new__pop">New</span>
-					<h3 class="new__name">Nike</h3>
-					<span class="new__detail">DD3223-100</span>
-					<span class="new__preci">¥24,200</span>
-					<a href="#" class="button new__button"><i class="bx bx-cart-alt"></i></a>
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-04.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>W SPACE HIPPIE 04 IRON GREY</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥14,000</h3>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-05.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>AIR FORCE 1 '07 LV8 BLACK</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥12,000</h3>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product__header">
+						<img src="img/nike-06.webp" alt="">
+						<ul class="icons">
+							<span><i class="bx bx-heart"></i></span>
+							<span><i class="bx bx-shopping-bag"></i></span>
+							<span><i class="bx bx-search"></i></span>
+						</ul>
+					</div>
+					<div class="product__footer">
+						<a href="#">
+							<h3>W DBREAK SPEED YELLOW</h3>
+						</a>
+						<div class="rating">
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bxs-star"></i>
+							<i class="bx bx-star"></i>
+						</div>
+						<h3 class="price">¥11,000</h3>
+					</div>
 				</div>
 			</div>
 		</section>
-
-		<!---------------------x Menu x---------------------------->
 	</main>
 </body>
 
